Added more functionality to rest
