# service/src/main/java/me/pabloestrada/api/AuthenticationService.java
@@ -6,5 +6,5 @@ public abstract class AuthenticationService
 {
     public abstract Optional<String> signJWT(final String username, final String password);
 
-    public abstract boolean verifyJWT(final String token);
+    public abstract String verifyJWT(final String token);
 }
