# service/src/main/java/me/pabloestrada/api/InternioRestMethods.java
@@ -3,12 +3,14 @@ package me.pabloestrada.api;
 import com.google.inject.Inject;
 import io.swagger.annotations.Api;
 import io.swagger.annotations.ApiOperation;
+import me.pabloestrada.core.user.User;
 
 import javax.ws.rs.GET;
 import javax.ws.rs.Path;
+import javax.ws.rs.QueryParam;
 
-@Path("/Internio")
-@Api(value = "/Internio")
+@Path("/internio")
+@Api(value = "/internio")
 public class InternioRestMethods
 {
     private InternioService delegate;
@@ -19,9 +21,9 @@ public class InternioRestMethods
     }
 
     @GET
-    @ApiOperation(value = "Getting developer name")
-    @Path("/dev")
-    public String getDeveloperName() {
-        return delegate.getDeveloperName();
+    @ApiOperation(value = "Getting user info")
+    @Path("/user")
+    public User getUser(@QueryParam("username") final String username) {
+        return delegate.getUser(username);
     }
 }
