# service/src/main/java/me/pabloestrada/api/impl/InternioServiceImpl.java
@@ -1,11 +1,28 @@
 package me.pabloestrada.api.impl;
 
+import com.google.inject.Inject;
 import me.pabloestrada.api.InternioService;
+import me.pabloestrada.core.user.User;
+import me.pabloestrada.core.user.UserDAO;
 
 public class InternioServiceImpl
     extends InternioService
 {
-    public String getDeveloperName() {
-        return "Pablo Estrada :)";
+
+    private UserDAO userDAO;
+
+    @Inject
+    public InternioServiceImpl(final UserDAO userDAO) {
+        this.userDAO = userDAO;
     }
+
+    public User getUser(final String username) {
+        return userDAO.getUser(username).get();
+    }
+
+//    public String getDeveloperName() {
+//        User user = new User("user", "password");
+//        userDAO.insertUser(user);
+//        return "Pablo Estrada :)";
+//    }
 }
